force-app/main/default/objects/Milestone__c/fields/Incomplete_ToDos__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_ToDos__c</fullName>
    <label>Incomplete ToDos</label>
    <summaryFilterItems>
        <field>ToDo__c.Is_Complete__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>ToDo__c.Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>