force-app/main/default/objects/Milestone__c/fields/Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>Percent_Complete__c</fullName>
    <formula>IF(
    Total_ToDos__c = 0,
    0,
    (Total_ToDos__c - Incomplete_ToDos__c) / Total_ToDos__c
)</formula>
    <label>Percent Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>