force-app/main/default/objects/Milestone__c/fields/Total_ToDos__c.field-meta.xml
<CustomField>
    <fullName>Total_ToDos__c</fullName>
    <label>Total ToDos</label>
    <summaryForeignKey>ToDo__c.Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>